# RNSR

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  analyze_failures.py  benchmark_cadell_affidavit_report.json  benchmark_comparison_report.json  benchmark_config.example.json  benchmark_workers_comp_report.json  compare_answers.py  debug_agent.py  debug_genai_exception.py  debug_tree.py  deep_dive_failure.py  demo.py  pyproject.toml  requirements.txt  run_all_benchmarks.py  run_benchmark.py  setup_windows.sh  test_architecture.py  test_layout_analysis.py  test_semantic_search.py  validate_benchmarks.py
.cursor/plans/: tot_parent_summaries_without_hallucination.plan.md
.cursor/rules/: llm-model-validation.mdc
.rnsr_demo_cache/9158197f938f29af/: manifest.json  skeleton.json
.rnsr_demo_cache/9306d60c8e6ebdd8/: manifest.json  skeleton.json
Research/: flat_text_research.txt
docs/: AUTOMATIC_TREE_CREATION.md  COMPARISON_RNSR_VS_PAGEINDEX.md  CUSTOM_TREE_INTEGRATION.md  EXPLANATION_FOR_3_YEAR_OLD.md  EXPLANATION_FOR_CS_GRAD.md  FAILURE_ANALYSIS.md  LAYOUTLM_IMPLEMENTATION.md  PERFORMANCE_FIXES.md  RNSR_SYSTEM_OVERVIEW.md  RNSR_VS_VECTIFY_PAGEINDEX.md  TECHNOLOGY_STACK_EXPLAINED.md
rnsr/: __init__.py  __main__.py  client.py  document_store.py  exceptions.py  llm.py  models.py
rnsr/agent/: __init__.py  cross_doc_navigator.py  graph.py  llm_cache.py  nav_repl.py  navigator_api.py  provenance.py  query_clarifier.py  reasoning_memory.py  repl_env.py  rlm_navigator.py  self_reflection.py  variable_store.py
rnsr/benchmarks/: README.md  __init__.py  comprehensive_benchmark.py  docvqa_bench.py  evaluation_suite.py  finance_bench.py  multihiertt_bench.py  pdf_merger.py  performance.py  qasper_bench.py  quality.py  runner.py  standard_benchmarks.py  tatqa_bench.py
rnsr/extraction/: __init__.py  candidate_extractor.py  entity_extractor.py  entity_linker.py  grounded_extractor.py  learned_types.py  models.py  relationship_extractor.py  relationship_patterns.py  relationship_validator.py  rlm_extractor.py  rlm_unified_extractor.py  tot_validator.py  unified_extractor.py
rnsr/indexing/: __init__.py  knowledge_graph.py  kv_store.py  persistence.py  semantic_retriever.py  semantic_search.py  skeleton_index.py
rnsr/ingestion/: __init__.py  chart_parser.py  document_boundary.py  font_histogram.py  header_classifier.py  hierarchical_cluster.py  layout_detector.py  layout_model.py  ocr_fallback.py  pipeline.py  semantic_fallback.py  table_parser.py  text_builder.py  tree_builder.py  vision_retrieval.py  xy_cut.py
samples/: sample_contract.md  sample_financial_report.md  sample_research_paper.md
scripts/: benchmark_demo.py  compare_benchmarks.py
tests/: __init__.py  conftest.py  test_agent_state.py  test_chart_parser.py  test_e2e_workflow.py  test_font_histogram.py  test_kv_store.py  test_learned_types.py  test_llm_cache.py  test_models.py  test_provenance.py  test_query_clarifier.py  test_reasoning_memory.py  test_rlm.py  test_rlm_unified.py  test_self_reflection.py  test_table_parser.py  test_tree_builder.py  test_variable_store.py
