[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rnsr"
version = "0.2.1"
description = "Recursive Neural-Symbolic Retriever - Hierarchical document retrieval with font-based structure analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "RNSR Contributors"}
]
keywords = [
    "rag",
    "retrieval",
    "document-processing",
    "llm",
    "hierarchical-indexing",
    "pdf-parsing",
    "neural-symbolic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",  # For hierarchical clustering
    "structlog>=23.0.0",
    "python-dotenv>=1.0.0",
    "llama-index>=0.10.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "pillow>=10.0.0",  # Image processing
    "scikit-learn>=1.3.0",  # k-means clustering for headers
]

[project.optional-dependencies]
vision = [
    "transformers>=4.35.0",  # HuggingFace transformers for LayoutLM
    "torch>=2.0.0",  # PyTorch for model inference
    "torchvision>=0.15.0",  # Vision utilities
    "pdf2image>=1.16.0",  # PDF to image conversion
]
openai = [
    "openai>=1.0.0",
    "llama-index-llms-openai>=0.1.0",
    "llama-index-embeddings-openai>=0.1.0",
]
anthropic = [
    "anthropic>=0.20.0",
    "llama-index-llms-anthropic>=0.1.0",
]
gemini = [
    "google-genai>=1.0.0",
]
all = [
    "rnsr[vision,openai,anthropic,gemini]",
]
benchmarks = [
    "datasets>=2.0.0",
    "ragas>=0.1.0",
]
demo = [
    "gradio>=6.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
rnsr = "rnsr.__main__:main"

[project.urls]
Homepage = "https://github.com/theeufj/RNSR"
Documentation = "https://github.com/theeufj/RNSR#readme"
Repository = "https://github.com/theeufj/RNSR.git"
Issues = "https://github.com/theeufj/RNSR/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rnsr*"]

[tool.setuptools.package-data]
rnsr = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.coverage.run]
source = ["rnsr"]
omit = ["*/tests/*", "*/__pycache__/*"]
